# impermachat

./: .gitignore  Cargo.toml  README.md
assets/css/: styles.css
assets/js/: datastar-1-0-0-beta-10-692d6cc430660adc.js  datastar-1-0-0-beta-10-692d6cc430660adc.js.map  datastar-1-0-0-beta-10-692d6cc430660adc.json
hosting/: README.md  impermachat.service
src/: app.rs  main.rs  public.rs  rooms.rs  routes.rs  templates.rs  web.rs
src/models/: users.rs
src/public/: handlers.rs  routes.rs  templates.rs
src/rooms/: handlers.rs  middleware.rs  routes.rs  templates.rs  utils.rs
src/routes/: auth.rs  protected.rs  public.rs  rooms.rs
templates/: base.html  chat_input.html  count_response.html  index.html  init_name.html  landing_base.html  major_error.html  message.html  protected.html  room.html  set_name.html  shutdown_room.html  signin.html  signup.html  status_message.html  submit_message.html  typing_messages.html
