[package]
name = "aahds"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-trait = "0.1.83"
axum = "0.7.9"
axum-login = "0.16.0"
axum-messages = "0.7.0"
futures-util = "0.3.31"
http = "1.2.0"
hyper = "1.5.2"
listenfd = "1.0.1"
password-auth = "1.0.0"
serde = "1.0.217"
sqlx = { version = "0.8.2", features = ["sqlite", "time", "runtime-tokio"] }
thiserror = "2.0.9"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.14.2", features = ["sqlite"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
